--- a/hello-world-apache-debian/Dockerfile
+++ b/hello-world-apache-debian/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:jessie
-LABEL Description="apache-webserver"
+LABEL Description="A simple apache-webserver"
 
 #installing apache
 RUN apt-get update && apt-get install -y apache2 && apt-get clean 
@@ -12,5 +12,7 @@ ENV APACHE_RUN_GROUP="www-data"
 ENV APACHE_LOG_DIR="/var/log/apache"
 
 COPY index.html var/www/html/index.html
+
+EXPOSE 80
 
 ENTRYPOINT ["/usr/sbin/apache2ctl", "-D", "FOREGROUND"]
